openshif-yaml/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patiwat-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/teehit101/guestbook-backend:94f5ba7b6dcad37fe665f98acbb3b39c59f17821
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
