openshif-yaml/deployment-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patiwat-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patiwat-postgres
  template:
    metadata:
      labels:
        app: patiwat-postgres
    spec:
      containers:
        - name: patiwat-postgres
          image: quay.io/fedora/postgresql-16:latest
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: patiwat-postgres
              mountPath: /var/lib/pgsql/data
      volumes:
        - name: patiwat-postgres
          persistentVolumeClaim:
            claimName: patiwat-postgres-storge
