openshif-yaml/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patiwat-frontend
  labels:
    app: patiwat-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patiwat-frontend
  template:
    metadata:
      labels:
        app: patiwat-frontend
    spec:
      containers:
        - name: patiwat-frontend
          image: ghcr.io/teehit101/guestbook-frontend:18e1bb3621095d85759a1c62c485dd07dc2b1406
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
