openshif-yaml/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: patiwat-backend
spec:
  selector:
    app: patiwat-backend
  ports:
    - port: 8080
      targetPort: 8080
