openshif-yaml/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: patiwat-frontend
spec:
  selector:
    app: patiwat-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
