openshif-yaml/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: patiwat-postgres
spec:
  selector:
    app: patiwat-postgres
  ports:
    - port: 5432
      targetPort: 5432
